# Orion-Tools

./: .gitignore  Common-Ngrams.txt  DeslopTool_classifier.py  FineWeb.py  README.md  RM-empty-Turns.py  binary_classification.py  complexity_analyzer.py  messages-sharegpt.py  phrase_filter.py  pyproject.toml  requirements.txt  semhash_dedupe.py
common/: vllm_classifier.py
configs/: seed_prompts_example.yaml
orion_tools/: __init__.py
orion_tools/cli/: __init__.py  binary_classifier.py  complexity_analyzer.py  dataset_filter.py  deduplication.py  fineweb_scorer.py  grammar_maxxer.py  ngram_analyzer.py  phrase_filter.py  seed_prompt_extractor.py  semhash_dedupe.py
orion_tools/common/: __init__.py  data_loader.py  vllm_classifier.py
pretrain-tools/: complexity_analyzer.py  deduplication.py  filterer.py  fineweb_score.py  grammar_maxxer.py  ngram_analyzer.py  phrase_filter.py  semhash_dedupe.py  text_utils.py  vllm_classifier.py
