[project]
name = "orion-tools"
version = "0.1.0"
description = "Fast, simple data filtering tools for JSONL datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "datasketch",
    "datasets",
    "jsonlines",
    "language-tool-python",
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "pyyaml",
    "spacy",
    "tqdm",
    "vllm>=0.11.0",
    "ray",
]

[project.scripts]
phrase-filter = "orion_tools.cli.phrase_filter:main"
dataset-filter = "orion_tools.cli.dataset_filter:main"
deduplication = "orion_tools.cli.deduplication:main"
complexity-analyzer = "orion_tools.cli.complexity_analyzer:main"
grammar-maxxer = "orion_tools.cli.grammar_maxxer:main"
binary-classifier = "orion_tools.cli.binary_classifier:main"
fineweb-scorer = "orion_tools.cli.fineweb_scorer:main"
ngram-analyzer = "orion_tools.cli.ngram_analyzer:main"
semhash-dedupe = "orion_tools.cli.semhash_dedupe:main"
seed-prompt-extractor = "orion_tools.cli.seed_prompt_extractor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
